[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
indexmap = "2.2.1"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
url = { version = "2.5.0", features = ["serde"] }
