[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
indexmap = "2.13.0"
itertools = "0.12.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
url = { version = "2.5.8", features = ["serde"] }
